Library/AXL(Library)/C, C++/AXDev.h

// Return Node Index number of Sequence Motion.
DWORD   __stdcall AxmSeqGetNodeNum(long lSeqMapNo, long* lCurNodeNo);
// Return All node count of Sequence Motion.
DWORD   __stdcall AxmSeqGetTotalNodeNum(long lSeqMapNo, long* lTotalNodeCnt);
// Return Sequence Motion drive status  of specific SeqMap.
// dwInMotion : 0(Drive end), 1(In drive)
DWORD   __stdcall AxmSeqIsMotion(long lSeqMapNo, DWORD* dwInMotion);
// Clear Sequence Motion Memory.
DWORD   __stdcall AxmSeqWriteClear(long lSeqMapNo);
// Stop sequence motion
// dwStopMode : 0(EMERGENCY_STOP), 1(SLOWDOWN_STOP)
DWORD   __stdcall AxmSeqStop(long lSeqMapNo, DWORD dwStopMode);
//========================================================================================================


//======== Only for PCIe-Rxx04-SIIIH ==========================================================================
// (SIIIH, MR_J4_xxB, Para : 0 ~ 8) ==
//     [0] : Command Position
//     [1] : Actual Position
//     [2] : Actual Velocity
//     [3] : Mechanical Signal
//     [4] : Regeneration load factor(%)
//     [5] : Effective load factor(%)
//     [6] : Peak load factor(%)
//     [7] : Current Feedback
//     [8] : Command Velocity
DWORD   __stdcall AxmStatusSetMon(long lAxisNo, DWORD dwParaNo1, DWORD dwParaNo2, DWORD dwParaNo3, DWORD dwParaNo4, DWORD dwUse);
DWORD   __stdcall AxmStatusGetMon(long lAxisNo, DWORD *dwpParaNo1, DWORD *dwpParaNo2, DWORD *dwpParaNo3, DWORD *dwpParaNo4, DWORD *dwpUse);
DWORD   __stdcall AxmStatusReadMon(long lAxisNo, DWORD *dwpParaNo1, DWORD *dwpParaNo2, DWORD *dwpParaNo3, DWORD *dwpParaNo4, DWORD *dwDataVaild);
DWORD   __stdcall AxmStatusReadMonEx(long lAxisNo, long *lpDataCnt, DWORD *dwpReadData);
//=============================================================================================================

//======== Only for PCI-R32IOEV-RTEX ===========================================================================
// The API for read or write HPI register which allocated as I/O port.
// I/O Registers for HOST interface.
// I/O 00h Host status register (HSR)
// I/O 04h Host-to-DSP control register (HDCR)
// I/O 08h DSP page register (DSPP)
// I/O 0Ch Reserved
DWORD   __stdcall AxlSetIoPort(long lBoardNo, DWORD dwAddr, DWORD dwData);
DWORD   __stdcall AxlGetIoPort(long lBoardNo, DWORD dwAddr, DWORD* dwpData);
//======== Only for PCI-R3200-MLIII ===========================================================================
// Basic information setting API for firmware update of M-III Master board.
DWORD   __stdcall AxlM3SetFWUpdateInit(long lBoardNo, DWORD dwTotalPacketSize, DWORD dwProcTotalStepNo);
// Verify setting value of 'AxlM3SetFWUpdateInit'.
DWORD   __stdcall AxlM3GetFWUpdateInit(long lBoardNo, DWORD *dwTotalPacketSize, DWORD *dwProcTotalStepNo);
// M-III Master board firmware update data transfer API.
DWORD   __stdcall AxlM3SetFWUpdateCopy(long lBoardNo, DWORD *pdwPacketData, DWORD dwPacketSize);
// Verify setting value of 'AxlM3SetFWUpdateCopy'.
DWORD   __stdcall AxlM3GetFWUpdateCopy(long lBoardNo, DWORD *dwPacketSize);
// Execute firmware update of M-III Master Board.
DWORD   __stdcall AxlM3SetFWUpdate(long lBoardNo, DWORD dwFlashBurnStepNo);
// Verifying result of execute firmware update of M-III Master Board.
DWORD   __stdcall AxlM3GetFWUpdate(long lBoardNo, DWORD *dwFlashBurnStepNo, DWORD *dwIsFlashBurnDone);
// The API for setting EEPROM data of M-III Master board.
DWORD   __stdcall AxlM3SetCFGData(long lBoardNo, DWORD *pCmdData, DWORD CmdDataSize);
// The API for getting data from EEPROM of M-III Master board.
DWORD   __stdcall AxlM3GetCFGData(long lBoardNo, DWORD *pCmdData, DWORD CmdDataSize);
// The API for setting CONNECT PARAMETER information of M-III Master board.
DWORD   __stdcall AxlM3SetMCParaUpdateInit(long lBoardNo, WORD wCh0Slaves, WORD wCh1Slaves, DWORD dwCh0CycTime, DWORD dwCh1CycTime, DWORD dwChInfoMaxRetry);
// The API for verifying CONNECT PARAMETER information of M-III Master board.
DWORD   __stdcall AxlM3GetMCParaUpdateInit(long lBoardNo, WORD *wCh0Slaves, WORD *wCh1Slaves, DWORD *dwCh0CycTime, DWORD *dwCh1CycTime, DWORD *dwChInfoMaxRetry);
// The API for transmit CONNECT PARAMETER information of M-III Master board.
DWORD   __stdcall AxlM3SetMCParaUpdateCopy(long lBoardNo, WORD wIdx, WORD wChannel, WORD wSlaveAddr, DWORD dwProtoCalType, DWORD dwTransBytes, DWORD dwDeviceCode);
// The API for verifying transmit CONNECT PARAMETER information of M-III Master board.
DWORD   __stdcall AxlM3GetMCParaUpdateCopy(long lBoardNo, WORD wIdx, WORD *wChannel, WORD *wSlaveAddr, DWORD *dwProtoCalType, DWORD *dwTransBytes, DWORD *dwDeviceCode);
// The API for checking register as DWord unit within M-III Master board.
DWORD   __stdcall AxlBoardReadDWord(long lBoardNo, WORD wOffset, DWORD *dwData);
// The API for setting register as DWord unit within M-III Master board.
DWORD   __stdcall AxlBoardWriteDWord(long lBoardNo, WORD wOffset, DWORD dwData);
// Setting and verifying extension register as DWord unit within board.
DWORD    __stdcall AxlBoardReadDWordEx(long lBoardNo, DWORD dwOffset, DWORD *dwData);
DWORD    __stdcall AxlBoardWriteDWordEx(long lBoardNo, DWORD dwOffset, DWORD dwData);
// The API for setting servo to stop mode.
DWORD   __stdcall AxmM3ServoSetCtrlStopMode(long lAxisNo, BYTE bStopMode);
// The API for setting servo to Lt selection state.
DWORD   __stdcall AxmM3ServoSetCtrlLtSel(long lAxisNo, BYTE bLtSel1, BYTE bLtSel2);
// The API for verifying servo I/O input state.
DWORD   __stdcall AxmStatusReadServoCmdIOInput(long lAxisNo, DWORD *upStatus);
// Servo interpolation drive API.
DWORD   __stdcall AxmM3ServoExInterpolate(long lAxisNo, DWORD dwTPOS, DWORD dwVFF, DWORD dwTFF, DWORD dwTLIM, DWORD dwExSig1, DWORD dwExSig2);
// The API for setting bias of the servo actuator.
DWORD   __stdcall AxmM3ServoSetExpoAccBias(long lAxisNo, WORD wBias);
// The API for setting time of the servo actuator.
DWORD   __stdcall AxmM3ServoSetExpoAccTime(long lAxisNo, WORD wTime);
// The API for setting time of the servo move.
DWORD   __stdcall AxmM3ServoSetMoveAvrTime(long lAxisNo, WORD wTime);
// The API for setting acc filter of the servo.
DWORD   __stdcall AxmM3ServoSetAccFilter(long lAxisNo, BYTE bAccFil);
// The API for setting status monitor1 of the servo.
DWORD   __stdcall AxmM3ServoSetCprmMonitor1(long lAxisNo, BYTE bMonSel);
// The API for setting status monitor2 of the servo.
DWORD   __stdcall AxmM3ServoSetCprmMonitor2(long lAxisNo, BYTE bMonSel);
// The API for verifying status monitor1 of the servo.
DWORD   __stdcall AxmM3ServoStatusReadCprmMonitor1(long lAxisNo, DWORD *upStatus);
// The API for verifying status monitor2 of the servo.
DWORD   __stdcall AxmM3ServoStatusReadCprmMonitor2(long lAxisNo, DWORD *upStatus);
// The API for setting Dec of servo actuator.
DWORD   __stdcall AxmM3ServoSetAccDec(long lAxisNo, WORD wAcc1, WORD wAcc2, WORD wAccSW, WORD wDec1, WORD wDec2, WORD wDecSW);
// The API for servo stop.
DWORD   __stdcall AxmM3ServoSetStop(long lAxisNo, long lMaxDecel);