Library/AXL(Library)/Visual Basic/AXDev.bas


' Return Node Index number of Sequence Motion.
Public Declare Function AxmSeqGetNodeNum Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByRef lCurNodeNo As Long) As Long


'  Return All node count of Sequence Motion.
Public Declare Function AxmSeqGetTotalNodeNum Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByRef lTotalNodeCnt As Long) As Long


' Return Sequence Motion drive status  of specific SeqMap.
' dwInMotion : 0(Drive end), 1(In drive).
Public Declare Function AxmSeqIsMotion Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByRef dwInMotion As Long) As Long


' Clear Sequence Motion Memory
Public Declare Function AxmSeqWriteClear Lib "AXL.dll" (ByVal lSeqMapNo) As Long


' Stop sequence motion
' dwStopMode : 0(EMERGENCY_STOP), 1(SLOWDOWN_STOP)
Public Declare Function AxmSeqStop Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByVal dwStopMode As Long) As Long


'========================================================================================================

'======== Only for PCIe-Rxx04-SIIIH ==========================================================================
' (SIIIH, MR_J4_xxB, Para : 0 ~ 8) ==
'     [0] : Command Position
'     [1] : Actual Position
'     [2] : Actual Velocity
'     [3] : Mechanical Signal
'     [4] : Regeneration load factor(%)
'     [5] : Effective load factor(%)
'     [6] : Peak load factor(%)
'     [7] : Current Feedback
'     [8] : Command Velocity
Public Declare Function AxmStatusSetMon Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwParaNo1 As Long, ByVal dwParaNo2 As Long, ByVal dwParaNo3 As Long, ByVal dwParaNo4 As Long, ByVal dwUse As Long) As Long
Public Declare Function AxmStatusGetMon Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpParaNo1 As Long, ByRef dwpParaNo2 As Long, ByRef dwpParaNo3 As Long, ByRef dwpParaNo4 As Long, ByRef dwpUse As Long) As Long
Public Declare Function AxmStatusReadMon Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpParaNo1 As Long, ByRef dwpParaNo2 As Long, ByRef dwpParaNo3 As Long, ByRef dwpParaNo4 As Long, ByRef dwDataValid As Long) As Long
Public Declare Function AxmStatusReadMonEx Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef lpDataCnt As Long, ByRef dwpReadData As Long) As Long

'=============================================================================================================

'======== Only for PCI-R32IOEV-RTEX ===========================================================================
' The API for read or write HPI register which allocated as I/O port.
' I/O Registers for HOST interface.
' I/O 00h Host status register (HSR)
' I/O 04h Host-to-DSP control register (HDCR)
' I/O 08h DSP page register (DSPP)
' I/O 0Ch Reserved
Public Declare Function AxlSetIoPort Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwAddr As Long, ByVal dwData As Long) As Long
Public Declare Function AxlGetIoPort Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwAddr As Long, ByRef dwpData As Long) As Long


'======= Only for PCI-R3200-MLIII ===========================================================================
' Basic information setting API for firmware update of M-III Master board.
Public Declare Function AxlM3SetFWUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwTotalPacketSize As Long, ByVal dwProcTotalStepNo As Long) As Long
' Verify setting value of 'AxlM3SetFWUpdateInit'.
Public Declare Function AxlM3GetFWUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwTotalPacketSize As Long, ByRef dwProcTotalStepNo As Long) As Long

' M-III Master board firmware update data transfer API.
Public Declare Function AxlM3SetFWUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef pdwPacketData As Long, ByVal dwPacketSize As Long) As Long
' Verify setting value of 'AxlM3SetFWUpdateCopy'.
Public Declare Function AxlM3GetFWUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwPacketSize As Long) As Long

' Execute firmware update of M-III Master Board.
Public Declare Function AxlM3SetFWUpdate Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwFlashBurnStepNo As Long) As Long
' Verifying result of execute firmware update of M-III Master Board.
Public Declare Function AxlM3GetFWUpdate Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwFlashBurnStepNo As Long, ByRef dwIsFlashBurnDone As Long) As Long

' The API for setting EEPROM data of M-III Master board.
Public Declare Function AxlM3SetCFGData Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef pCmdData As Integer, ByVal CmdDataSize As Integer) As Long
' The API for getting data from EEPROM of M-III Master board.
Public Declare Function AxlM3GetCFGData Lib "AXL.dll" (ByVal lBoradNo As Long, ByRef pCmdData As Integer, ByVal CmdDataSize As Integer) As Long

' The API for setting CONNECT PARAMETER information of M-III Master board.
Public Declare Function AxlM3SetMCParaUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wCh0Slaves As Integer, ByVal wCh1Slaves As Integer, ByVal dwCh0CycTime As Long, ByVal dwCh1CycTime As Long, ByVal dwChInfoMaxRetry As Long) As Long
' The API for verifying CONNECT PARAMETER information of M-III Master board.
Public Declare Function AxlM3GetMCParaUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef wCh0Slaves As Integer, ByVal wCh1Slaves As Integer, ByRef dwCh0CycTime As Long, ByRef dwCh1CycTime As Long, ByRef dwChInfoMaxRetry As Long) As Long
' The API for transmit CONNECT PARAMETER information of M-III Master board.
Public Declare Function AxlM3SetMCParaUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wIdx As Integer, ByVal wSlaveAddr As Integer, ByVal dwProtoCalType As Long, ByVal dwTransBytes As Long, ByVal dwDeviceCode As Long) As Long
' The API for verifying transmit CONNECT PARAMETER information of M-III Master board.
Public Declare Function AxlM3GetMCParaUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wIdx As Integer, ByRef wChannel As Integer, ByRef wSlaveAddr As Integer, ByRef dwProtoCalType As Long, ByRef dwTransBytes As Long, ByRef dwDeviceCode As Long) As Long

' The API for checking register as DWord unit within M-III Master board.
Public Declare Function AxlBoardReadDWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Integer, ByRef dwData As Long) As Long
' The API for setting register as DWord unit within M-III Master board
Public Declare Function AxlBoardWriteDWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Integer, ByVal dwData As Long) As Long

' Setting and verifying extension register as DWord unit within board.
Public Declare Function AxlBoardReadDWordEx Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwOffset As Long, ByRef dwData As Long) As Long
Public Declare Function AxlBoardWriteDWordEx Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwOffset As Long, ByVal dwData As Long) As Long


' The API for setting servo to stop mode.
Public Declare Function AxmM3ServoSetCtrlStopMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal bStopMode As Byte) As Long
' The API for setting servo to Lt selection state.
Public Declare Function AxmM3ServoSetCtrlLtSel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal bLtSell As Byte, ByVal bLtSel2 As Byte) As Long
' The API for verifying servo I/O input state.
Public Declare Function AxmStatusReadServoCmdIOInput Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long
' Servo interpolation drive API.
Public Declare Function AxmM3ServoExInterpolate Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwTPOS As Long, ByVal dwVFF As Long, ByVal dwTFF As Long, ByVal dwTLIM As Long, ByVal dwExSig1 As Long, ByVal dwExSig2 As Long) As Long
' The API for setting bias of the servo actuator.
Public Declare Function AxmM3ServoSetExpoAccBias Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wBias As Integer) As Long
' The API for setting time of the servo actuator.
Public Declare Function AxmM3ServoSetExpoAccTime Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wTime As Integer) As Long
' The API for setting time of the servo move.
Public Declare Function AxmM3ServoSetMoveAvrTime Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wTime As Integer) As Long
' The API for setting acc filter of the servo.
Public Declare Function AxmM3ServoSetAccFilter Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal bAccFil As Byte) As Long
' The API for setting status monitor1 of the servo.
Public Declare Function AxmM3ServoSetCprmMonitor1 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal bMonSel As Byte) As Long
' The API for setting status monitor2 of the servo.
Public Declare Function AxmM3ServoSetCprmMonitor2 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal bMonSel As Byte) As Long
' The API for verifying status monitor1 of the servo.
Public Declare Function AxmM3ServoStatusReadCprmMonitor1 Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long
' The API for verifying status monitor2 of the servo.
Public Declare Function AxmM3ServoStatusReadCprmMonitor2 Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long
' The API for setting Dec of servo actuator.
Public Declare Function AxmM3ServoSetAccDec Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wAccl As Integer, ByVal wAcc2 As Integer, ByVal wAccSW As Integer, ByVal wDec1 As Integer, ByVal wDec2 As Integer, ByVal wDecSW As Integer) As Long
' The API for servo stop.
Public Declare Function AxmM3ServoSetStop Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lMaxDecel As Long) As Long

